--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<!-- Este es un codigo dedicado a mi preciosa hija MCTM-->
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hang Man Game Javascript | TerTech</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts/script.js" defer></script>
+    <script src="scripts/word-list.js" defer></script>
+    
 </head>
+
 <body>
     <div class="game-modal">
         <div class="content">
@@ -22,15 +25,7 @@
             <h1>HangMan Game </h1>
         </div>
         <div class="game-box">
-            <ul class="word-display">
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter guessed">a</li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-                <li class="letter"></li>
-            </ul>
+            <ul class="word-display"></ul>
             <h4 class="hint-text">
                 Hint:
                 <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. </b>
@@ -39,9 +34,8 @@
                 Incorrect Guesses:
                 <b>0 / 6</b>
             </h4>
-            <div class="keyboard">
-                <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button><button>f</button><button>g</button><button>h</button><button>i</button><button>j</button><button>k</button><button>l</button><button>m</button><button>n</button><button>o</button><button>p</button><button>q</button><button>r</button><button>s</button><button>t</button><button>u</button><button>v</button><button>w</button><button>x</button><button>y</button><button>z</button>
-            </div>
+            <div class="keyboard"></div>      
+            
         </div>
     </div>
 </body>
