--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hang Man Game Javascript | TerTech</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./scripts/word-list.js" defer></script>
     <script src="scripts/script.js" defer></script>
-    <script src="scripts/word-list.js" defer></script>
+    
     
 </head>
 
@@ -28,7 +29,7 @@
             <ul class="word-display"></ul>
             <h4 class="hint-text">
                 Hint:
-                <b>Lorem ipsum dolor sit amet consectetur adipisicing elit. </b>
+                <b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b>
             </h4>
             <h4 class="guesses-text">
                 Incorrect Guesses:
